2016-05-26  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, header/*, lkr/*, libgputils/gpcfg-table.c,
    libgputils/gpprocessor.c, libgputils/gpreg-table.c:
    Updated with new devices based on the mplabx-3.30.

  * header/p16(l)f18854.inc, header/p16(l)f18856.inc,
    header/p16(l)f18876.inc, header/p16(l)f18857.inc,
    header/p16(l)f18877.inc, header/p16lf1566.inc,
    header/p16lf1567.inc:
    Added the missing DEBUG config option to these MCUs.

2016-05-26  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx:
    Updated based on the mplabx-3.30.

  * gpasm/testsuite/test_all_processors,
    gpasm/testsuite/gpasm.project/asmfiles/banksel5.asm,
    gpasm/testsuite/gpasm.project/hexfiles/banksel5.hex,
    gpasm/testsuite/gpasm.project/listfiles/banksel5.lst,
    gpasm/directive.c, gpasm/lst.c, libgputils/gpdis.c,
    libgputils/gpprocessor.c:
    bugfix

  * libgputils/gpmemory.c, libgputils/gpopcode.c,
    libgputils/gpopcode.h, libgputils/gpprocessor.c, 
    libgputils/gpprocessor.h:
    Code formatting.

  * libgputils/gpmemory.h:
    More understandable code.

  * libgputils/gpwriteobj.c:
    Little optimisation.

2016-05-24  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * configure.ac, configure:
    Changed Mplabx default path from "/opt/microchip/mplabx/v3.26"
    to "/opt/microchip/mplabx/v3.30".

  * header/*, lkr/*, libgputils/gpcfg-table.c,
    libgputils/gpreg-table.c:
    Updated based on the mplabx-3.30.

2016-05-18  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/cod.c, gpasm/directive.c, gpasm/evaluate.c,
    gpasm/evaluate.h, gpasm/lst.c, gplink/lst.c,
    libgputils/gpcofflink.c, libgputils/gpdis.c,
    libgputils/gpmemory.c, libgputils/gpmemory.h,
    libgputils/gpreadobj.c, libgputils/gpsystem.c,
    libgputils/gpsystem.h:
    Changed variabla types: "unsigned char" to "uint8_t",
                            "unsigned short" to "uint16_t".

  * gpasm/lst.c: