@@ -800,27 +800,29 @@ my @mcu_missed_debug_0x8008_0x1000 =
   'PIC16LF1508', 'PIC16LF1509', 'PIC16LF1512', 'PIC16LF1513',
   'PIC16LF1516', 'PIC16LF1517', 'PIC16LF1518', 'PIC16LF1519',
   'PIC16LF1526', 'PIC16LF1527', 'PIC16LF1554', 'PIC16LF1559',
-  'PIC16LF1574', 'PIC16LF1575', 'PIC16LF1578', 'PIC16LF1579',
-  'PIC16LF1613', 'PIC16LF1614', 'PIC16LF1615', 'PIC16LF1618',
-  'PIC16LF1619', 'PIC16LF1703', 'PIC16LF1704', 'PIC16LF1705',
-  'PIC16LF1707', 'PIC16LF1708', 'PIC16LF1709', 'PIC16LF1713',
-  'PIC16LF1716', 'PIC16LF1717', 'PIC16LF1718', 'PIC16LF1719',
-  'PIC16LF1764', 'PIC16LF1765', 'PIC16LF1768', 'PIC16LF1769',
-  'PIC16LF1773', 'PIC16LF1776', 'PIC16LF1777', 'PIC16LF1778',
-  'PIC16LF1779', 'PIC16LF1782', 'PIC16LF1783',
-  'PIC16LF1784', 'PIC16LF1786', 'PIC16LF1787', 'PIC16LF1788',
-  'PIC16LF1789', 'PIC16LF1823', 'PIC16LF1824', 'PIC16LF1824T39A',
-  'PIC16LF1825', 'PIC16LF1826', 'PIC16LF1827', 'PIC16LF1828',
-  'PIC16LF1829', 'PIC16LF1847', 'PIC16LF1902', 'PIC16LF1903',
-  'PIC16LF1904', 'PIC16LF1906', 'PIC16LF1907', 'PIC16LF1933',
-  'PIC16LF1934', 'PIC16LF1936', 'PIC16LF1937', 'PIC16LF1938',
-  'PIC16LF1939', 'PIC16LF1946', 'PIC16LF1947'
+  'PIC16LF1566', 'PIC16LF1567', 'PIC16LF1574', 'PIC16LF1575',
+  'PIC16LF1578', 'PIC16LF1579', 'PIC16LF1613', 'PIC16LF1614',
+  'PIC16LF1615', 'PIC16LF1618', 'PIC16LF1619', 'PIC16LF1703',
+  'PIC16LF1704', 'PIC16LF1705', 'PIC16LF1707', 'PIC16LF1708',
+  'PIC16LF1709', 'PIC16LF1713', 'PIC16LF1716', 'PIC16LF1717',
+  'PIC16LF1718', 'PIC16LF1719', 'PIC16LF1764', 'PIC16LF1765',
+  'PIC16LF1768', 'PIC16LF1769', 'PIC16LF1773', 'PIC16LF1776',
+  'PIC16LF1777', 'PIC16LF1778', 'PIC16LF1779', 'PIC16LF1782',
+  'PIC16LF1783', 'PIC16LF1784', 'PIC16LF1786', 'PIC16LF1787',
+  'PIC16LF1788', 'PIC16LF1789', 'PIC16LF1823', 'PIC16LF1824',
+  'PIC16LF1824T39A', 'PIC16LF1825', 'PIC16LF1826', 'PIC16LF1827',
+  'PIC16LF1828', 'PIC16LF1829', 'PIC16LF1847', 'PIC16LF1902',
+  'PIC16LF1903', 'PIC16LF1904', 'PIC16LF1906', 'PIC16LF1907',
+  'PIC16LF1933', 'PIC16LF1934', 'PIC16LF1936', 'PIC16LF1937',
+  'PIC16LF1938', 'PIC16LF1939', 'PIC16LF1946', 'PIC16LF1947'
   );
 
 my @mcu_missed_debug_0x8008_0x2000 =
   (
-  'PIC16F18855', 'PIC16F18875',
-  'PIC16LF18855', 'PIC16LF18875'
+  'PIC16F18854', 'PIC16F18855', 'PIC16F18856', 'PIC16F18857',
+  'PIC16F18875', 'PIC16F18876', 'PIC16F18877',
+  'PIC16LF18854', 'PIC16LF18855', 'PIC16LF18856', 'PIC16LF18857',
+  'PIC16LF18875', 'PIC16LF18876', 'PIC16LF18877'
   );
 
 # The Microchip created faulty database: 8bit_device.info
